--- a/stylesheets/30_color_screen_handheld.css
+++ b/stylesheets/30_color_screen_handheld.css
@@ -402,16 +402,22 @@ pre, #toc {
 }
 
 
-/* Flickr */
+/* Flickr e Picasa */
 #main_content h5 a, #big_picture cite a {
-  background:         transparent url(../images/flickr_logo.png) no-repeat left top;
+/*  background:         transparent url(../images/flickr_logo.png) no-repeat left top;*/
 }
 
-#thumbnails cite a {
-  background:         transparent url(../images/flickr.png) no-repeat left top;
+#thumbnails cite.flickr a {
+  background:         transparent url(../images/flickr.png) no-repeat left 7px;
 }
-#thumbnails cite a:hover {
+#thumbnails cite.flickr a:hover {
   background-image:   url(../images/flickr_hover.png);
+}
+#thumbnails cite.picasa a {
+  background:         transparent url(http://beonthe.net/accounts/beonthe.net/images/icon_picasa.png) no-repeat left top;
+}
+#thumbnails cite.picasa a:hover {
+  background-image:   url(http://beonthe.net/accounts/beonthe.net/images/icon_picasa_hover.png);
 }
 
 body #footer h6 {
@@ -420,7 +426,7 @@ body #footer h6 {
 body #footer h6 em {
   color:              #7B7BA4;
 }
-/* /Flickr */
+/* /Flickr e Picasa */
 
 
 /* Exclusivo */
