--- a/stylesheets/10_typography.css
+++ b/stylesheets/10_typography.css
@@ -410,9 +410,9 @@ p#not_found, .application #main_content h2 {
 }
 
 
-/* Flickr */
+/* Flickr e Picasa */
 #main_content h5, #main_content h5 a, 
-#big_picture cite {
+#big_picture cite, #big_picture cite a {
   font-style:         normal;
   font-weight:        normal;
   line-height:        1.5em;
@@ -422,11 +422,11 @@ p#not_found, .application #main_content h2 {
   font-size:          70%;
   text-align:         right;
 }
-
 #main_content h5 a, #big_picture cite a {
-  text-indent:        38px;
+  font-size:          100%;
+/*  text-indent:        38px;*/
 }
-#main_content h5 a:hover {
+#main_content h5 a:hover, #big_picture cite a:hover {
   text-decoration:    underline;
 }
 
@@ -438,4 +438,4 @@ body #footer h6 {
   font-size:          10px;
   letter-spacing:     .02em;
 }
-/* /Flickr */
+/* /Flickr e Picasa */
