--- a/stylesheets/50_layout_ie6.css
+++ b/stylesheets/50_layout_ie6.css
@@ -25,11 +25,18 @@ body.videos #thumbnails img {
 }
 
 
-/* Flickr */
+/* Flickr e Picasa */
 #thumbnails cite a, #thumbnails cite a:hover {
-  background-image:       url(../images/flickr_ie6.png);
-  filter:                 alpha(opacity=30);
+	filter:                 alpha(opacity=30);
 }
 #thumbnails cite a:hover {
-  filter:                 alpha(opacity=100);
+	filter:                 alpha(opacity=100);
 }
+
+#thumbnails cite.flickr a, #thumbnails cite.flickr a:hover {
+  background-image:       url(../images/flickr_ie6.png);
+}
+#thumbnails cite.picasa a, #thumbnails cite.picasa a:hover {
+  background-image:       url(http://beonthe.net/accounts/beonthe.net/images/icon_picasa_ie6.png);
+}
+/* /Flickr e Picasa */
