--- a/stylesheets/30_color_screen_handheld.css
+++ b/stylesheets/30_color_screen_handheld.css
@@ -198,7 +198,7 @@ code, .text th {
 }
 
 #header {
-  background:             url(../images/header_bg.jpg) top;
+  background:             url(../images/header_bg.jpg) bottom;
   border-bottom-color:    #3B3B48;
 }
 
