--- a/stylesheets/20_layout_screen.css
+++ b/stylesheets/20_layout_screen.css
@@ -163,44 +163,43 @@ code {
 }
 
 #header ul {
-	height:               43px;
-  padding-right:        10px;
-	padding-left:         20px;
+  padding:              6px 12px 8px 7px;
+	border-width:         1px;
+	border-style:         solid;
+  border-radius:        7px;
+  margin:               0;
 	position:             absolute;
-  top:                  40px;
-  right:                170px;
+  bottom:               19px;
+  right:                0;
+  max-width:            600px;
 }
 
-#header li {
-	display:              inline;
-  padding:              0;
+#header li, #header li a {
+  display:              inline-block;
 }
 
 #header li a {
-  padding:              .5em .65em 0em 0.35em;
-  margin-left:          0%;
+  padding:              1px 9px;
+  margin-right:         -5px;
 }
 
 #global_search {
-  width:                170px;
-  height:               43px;
-  position:             absolute;
-  top:                  56px;
-  right:                0;
-}
-
-#global_search #search_type {
-  display:              none;
-}
-
-#query {
-  width:                  112px;
-  height:                 22px;
-  padding:                0 10px 0 25px;
-  border:                 none;
+  padding:                4px 2px;
+  border-width:           1px 1px 0 0;
+  border-style:           solid;
+  border-top-left-radius: 7px;
+  border-top-right-radius:7px;
   position:               absolute;
-  right:                  23px;
-  top:                    28px;
+  bottom:                 -15px;
+  right:                  0;
+}
+
+#global_search #query {
+  width:                  130px;
+  padding:                2px 3px 2px 25px;
+  border:                 none;
+  border-radius:          4px;
+  margin:                 0;
 }
 /* /Header */
 
