--- a/stylesheets/20_layout_screen.css
+++ b/stylesheets/20_layout_screen.css
@@ -103,6 +103,8 @@ code {
 
   display:                block;
   padding:                3px 2px;
+
+  background:             url(../images/header_bg.jpg) top;
 }
 
 #social_network p {
