--- a/stylesheets/20_layout_screen.css
+++ b/stylesheets/20_layout_screen.css
@@ -407,6 +407,11 @@ body.videos #thumbnails img {
   left:                 43.5%;
 }
 
+#big_video object {
+  max-width:            800px;
+  max-height:           450px;
+}
+
 #big_video label {
   display:              block;
   width:                auto;
