--- a/stylesheets/20_layout_screen.css
+++ b/stylesheets/20_layout_screen.css
@@ -354,8 +354,9 @@ code {
 }
 
 body.videos #thumbnails img {
-/*  max-width:            240px;*/
-  width:                240px;
+  max-width:            240px;
+/*  width:                240px;*/
+  max-height:           240px;
 }
 /* /Thumbnails */
 
