Acomodando botões de compartilhamento na barra .social_media.

--- a/stylesheets/20_layout_screen.css
+++ b/stylesheets/20_layout_screen.css
@@ -130,15 +130,20 @@ code {
 /* Social media */
 .social_media {
   padding:                          9px;
+  margin:                           0 -10px;
+
   color:                            #FFF;
   background:                       rgba(0,0,0,.8);
-
-  margin:                           0 -10px;
 }
 
 .social_media section {
   display:                          inline-block;
+  vertical-align:                   middle;
   width:                            49.5%;
+  opacity:                          .6;
+}
+.social_media section:hover {
+  opacity:                          1;
 }
 
 .social_media em {
@@ -151,10 +156,6 @@ code {
   color:                            #DDD;
 }
 
-.social_media iframe {
-  vertical-align:                   middle;
-}
-
 @media screen and (min-width:1024px) {
   .social_media {
     padding-right:                  70px;
@@ -165,8 +166,14 @@ code {
   }
 }
 
+.social_sharing > iframe, .social_sharing > div {
+  display:                          inline-block;
+  vertical-align:                   middle !important;
+}
+
 .social_links {
   text-align:                       right;
+  height:                           32px;
 }
 
 .social_links a {
