--- a/stylesheets/20_layout_screen.css
+++ b/stylesheets/20_layout_screen.css
@@ -195,16 +195,21 @@ code {
 #big_picture #social_sharing, #big_video #social_sharing {
   width:                            40px;
   position:                         absolute;
-  top:                              82px;
-  right:                            43px;
-  display:                                                                                none;
+  top:                              3px;
+  right:                            -27px;
 }
 #big_picture #social_sharing > iframe, #big_picture #social_sharing > div, 
 #big_video #social_sharing > iframe, #big_video #social_sharing > div {
-  margin:                           0 0 20px;
+  margin:                           0 0 17px;
+}
+#big_picture #social_sharing > iframe:first-child {
+  margin-bottom:                    95px;
 }
 #big_picture #social_sharing > div:last-child {
-  margin:                           30px 0 0;
+  margin:                           27px 0 0;
+}
+#big_picture #social_sharing div a, #big_video #social_sharing div a {
+  top:                              0;
 }
 /* /Big picture social sharing */
 
@@ -456,15 +461,16 @@ body.videos #thumbnails img {
 #big_picture a, #big_video a {
   width:                4.75em;
   position:             absolute;
-  top:                  70px;
+  top:                  83px;
+  z-index:              1;
 }
 
 #big_picture #previous, #big_video #previous {
-  left:                 -2.5em;
+  left:                 -43px;
 }
 
 #big_picture #next, #big_video #next {
-  right:                -2.5em;
+  right:                -30px;
 }
 
 #big_picture a span, #big_video a span {
