--- a/stylesheets/20_layout_screen.css
+++ b/stylesheets/20_layout_screen.css
@@ -191,30 +191,6 @@ code {
 /* /Social media */
 
 
-/* Big picture social sharing */
-#big_picture #social_sharing, #big_video #social_sharing {
-  width:                            40px;
-  position:                         absolute;
-  top:                              3px;
-  right:                            -27px;
-}
-#big_picture #social_sharing > iframe, #big_picture #social_sharing > div, 
-#big_video #social_sharing > iframe, #big_video #social_sharing > div {
-  margin:                           0 0 17px;
-}
-#big_picture #social_sharing > iframe:first-child {
-  margin-bottom:                    95px;
-}
-#big_picture #social_sharing > div:last-child {
-  margin:                           27px 0 0;
-}
-#big_picture #social_sharing div a, #big_video #social_sharing div a {
-  position:                         relative !important;
-  top:                              0;
-}
-/* /Big picture social sharing */
-
-
 /* Header */
 #header, #main_content, #footer {
   padding-right:        3.9em;
@@ -459,7 +435,8 @@ body.videos #thumbnails img {
   position:             relative;
 }
 
-#big_picture a, #big_video a {
+#big_picture #previous, #big_picture #next, 
+#big_video #previous, #big_video #next {
   width:                4.75em;
   position:             absolute;
   top:                  83px;
@@ -474,7 +451,8 @@ body.videos #thumbnails img {
   right:                -30px;
 }
 
-#big_picture a span, #big_video a span {
+#big_picture #previous span, #big_picture #next span, 
+#big_video #previous span, #big_video #next span {
   width:                101%;
   height:               60px;
   position:             absolute;
@@ -520,6 +498,30 @@ body.videos #thumbnails img {
   position:             static;
 }
 /* /Big picture, big video */
+
+
+/* Big picture social sharing */
+#big_picture #social_sharing, #big_video #social_sharing {
+  width:                            40px;
+  position:                         absolute;
+  top:                              3px;
+  right:                            -27px;
+}
+#big_picture #social_sharing > iframe, #big_picture #social_sharing > div, 
+#big_video #social_sharing > iframe, #big_video #social_sharing > div {
+  margin:                           0 0 17px;
+}
+#big_picture #social_sharing > iframe:first-child {
+  margin-bottom:                    95px;
+}
+#big_picture #social_sharing > div:last-child {
+  margin:                           47px 0 0;
+}
+#big_picture #social_sharing div img, #big_video #social_sharing div img {
+  padding:                          0;
+  border:                           none;
+}
+/* /Big picture social sharing */
 
 
 /* Tags */
